--- a/client/main.html
+++ b/client/main.html
@@ -1,10 +1,30 @@
 <head>
   <title>CaelisSante Logs Client</title>
+  <!-- Compiled and minified CSS -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/css/materialize.min.css">
+  <!--Import Google Icon Font-->
+  <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <!-- Compiled and minified JavaScript -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/js/materialize.min.js"></script>
 </head>
 
 <body class="grey lighten-4">
 
     <div class="header clearfix">
+      <!-- Dropdown Structure -->
+      <ul id="indicesdd" class="dropdown-content">
+        <li><a href="#!">Applications</a></li>
+        <li class="divider"></li>
+        <li><a href="#!">Cisco ASA</a></li>
+        <li><a href="#!">Switches</a></li>
+        <li class="divider"></li>
+        <li><a href="#!">Linux Syslog</a></li>
+        <li><a href="#!">Linux Auth</a></li>
+        <li><a href="#!">Linux Fail2Ban</a></li>
+        <li class="divider"></li>
+        <li><a href="#!">Sécurité Windows</a></li>
+      </ul>
+
       <nav>
         <div class="nav-wrapper blue lighten-1 z-depth-2">
           <a href="#" class="brand-logo center">
@@ -16,7 +36,7 @@
           <ul class="right hide-on-med-and-down">
             <li><a href="#">Historique</a></li>
             <li><a href="#">Demande</a></li>
-            <li class="indicesButton"><a href="#">Indices</a></li>
+            <li><a class="dropdown-button" href="#!" data-activates="indicesdd">Indices<i class="material-icons right">arrow_drop_down</i></a></li>
           </ul>
         </div>
       </nav>
